app/assets/stylesheets/custom.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";

body {
  margin: 0;
  padding: 0;
}

.css-icon {
  display: block;
  height: 50px;
  width: 50px;
  line-height: 50px;

  border: 4px solid #01D298;
  -moz-border-radius: 40px;
  -webkit-border-radius: 40px;
  -ms-border-radius: 40px;
  -o-border-radius: 40px;
  border-radius: 40px;

  box-shadow: 0 0 3px #888;
  background-color: #E7FEF8;
  color: black;
  top: 0;
  text-align: center;
  font-size: 2em;
  }

.register {
  margin-top: 3em;
}

.alerts-div {
  z-index: 99;
  position: absolute;
  bottom: 50px;
  right: 0;
  width: 100%;
  text-align: center;
}

div.alert.alert-danger {
  margin-bottom: 9.5em;
}

.login {
  position: absolute;
  margin: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  background-color: rgba(255, 255, 255, 0.7);
  z-index: 100;
}

.login-links {
  text-align: center;
  margin: 0 auto;
}

.logout, .login-or-register {
  display: none;
  position: absolute;
  background-color: rgba(255, 255, 255, .7);
  top: 0;
  right: 0;
  padding: .5em;
  font-weight: bold;
  z-index: 100;
}

.location-search {
  display: none;
  position: absolute;
  background-color: rgba(0, 0, 0, .7);
  color: white;
  // padding-top: 0.5em;
  bottom: 70px;
  width: 100%;
  z-index: 100;
}

.nav-bar {
  display: none;
  position: absolute;
  background-color: rgba(255, 255, 255, .7);
  padding: 1em;
  width: 100%;
  bottom: 0;
  z-index: 100;
  text-align: center;
}

div.leaflet-control-attribution, div.leaflet-compact-attribution {
  bottom: 70px;
}

#map {
  position:absolute;
  top:0;
  bottom:0;
  width:100%;
  height: 100%;
  // transform: scale(1.4);
  // transform-origin: top left;
}

